@@ -37,6 +37,8 @@
     Surf to <http://chirpy.sourceforge.net/ The Chirpy! web site>!
 * Simplified RSS feed: using HTML in <description> and removing
   <content:encoded> and <xhtml:body>, making feedvalidator.org like it more
+* News body on start page is now divided into paragraphs; opening and closing
+  tag are included, so update your templates
 * Bugfix: live rating no longer throws a JavaScript error in IE
 * Bugfix: quote rating up log entry now includes quote ID (#1493589)
 * Just for fun, quote IDs can now be in binary and hex notation too, as per
